--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
       .container {
-        flex-wrap: wrap;
         display: flex;
+        font-smoothing: antialiased !important;
       }
 
       .pad {
@@ -14,6 +14,22 @@
         margin: 20px;
         text-decoration: none;
         width: 200px;
+        box-shadow: inset 0 0 20px rgba(0,0,0,0.2), 0 10px 15px rgba(0,0,0,0.2);
+        transition: all 100ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+      }
+
+      .pad:hover, .stop:hover {
+        position: relative;
+        transform: scale(1.005);
+        box-shadow: inset 0 0 20px rgba(0,0,0,0.2), 0 15px 30px rgba(0,0,0,0.2);
+        transition: all 100ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+      }
+
+      .pad:active, .stop:active {
+        position: relative;
+        transform: scale(0.995);
+        box-shadow: inset 0 0 20px rgba(0,0,0,0.2), 0 5px 8px rgba(0,0,0,0.2);
+        transition: all 100ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
       }
 
       .stop {
@@ -26,6 +42,8 @@
         justify-content: center;
         margin: 20px;
         text-decoration: none;
+        box-shadow: inset 0 0 20px rgba(0,0,0,0.2), 0 10px 15px rgba(0,0,0,0.2);
+
       }
 
       /* PAD Colours */
@@ -35,22 +53,29 @@
       }
 
       .aqua {
-        background: linear-gradient(45deg, #00d2ff 0%, #3a47d5 100%);
+        background: linear-gradient(45deg, #3a47d5 0%, #00d2ff 100%);
       }
 
       .mellow {
-        background: linear-gradient(45deg, #f8ff00 0%, #3ad59f 100%);
+        background: linear-gradient(215deg, #f8ff00 0%, #3ad59f 100%);
       }
 
       .cool {
-        background-image: linear-gradient( 135deg, #5EFCE8 10%, #736EFE 100%);
+        background-image: linear-gradient( 215deg, #5EFCE8 10%, #736EFE 100%);
       }
 
       .salmon {
-        background-image: linear-gradient(45deg, #feb692 10%, #ea5455 100%);
+        background-image: linear-gradient(215deg, #feb692 10%, #ea5455 100%);
       }
 
       .burningOrange {
-        background: linear-gradient(to right, #ff416c, #ff4b2b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        background: linear-gradient(45deg, #ff416c, #ff4b2b); 
+      }
 
+      .moonlit {
+        background: linear-gradient(45deg, #0f2027, #203a43, #2c5364); 
+      }
+
+      .coal {
+        background: linear-gradient(215deg, #eb5757, #000000);
       }
