added flex wrap

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+      body { background: rgb(58, 62, 75)}
+      
       .container {
         display: flex;
+        flex-wrap: wrap;
         font-smoothing: antialiased !important;
       }
 
@@ -11,7 +14,7 @@
         font-family: Arial, Helvetica, sans-serif;
         height: 200px;
         justify-content: center;
-        margin: 20px;
+        margin: 10px;
         text-decoration: none;
         width: 200px;
         box-shadow: inset 0 0 20px rgba(0,0,0,0.2), 0 10px 15px rgba(0,0,0,0.2);
@@ -40,7 +43,7 @@
         font-family: Arial, Helvetica, sans-serif;
         height: 100px;
         justify-content: center;
-        margin: 20px;
+        margin: 10px;
         text-decoration: none;
         box-shadow: inset 0 0 20px rgba(0,0,0,0.2), 0 10px 15px rgba(0,0,0,0.2);
 
