--- a/style.css
+++ b/style.css
@@ -7,11 +7,13 @@
       }
 
       .pad {
+        text-align: center;
         align-items: center;
         border-radius: 4px;
         display: flex;
         color: white;
         font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
         height: 200px;
         justify-content: center;
         margin: 10px;
@@ -19,6 +21,7 @@
         width: 200px;
         box-shadow: inset 0 0 20px rgba(0,0,0,0.2), 0 10px 15px rgba(0,0,0,0.2);
         transition: all 100ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+        border: 1px solid rgba(255,255,255, 0.1)
       }
 
       .pad:hover, .stop:hover {
@@ -46,39 +49,43 @@
         margin: 10px;
         text-decoration: none;
         box-shadow: inset 0 0 20px rgba(0,0,0,0.2), 0 10px 15px rgba(0,0,0,0.2);
+        border: 1px solid rgba(255,255,255, 0.1)
 
       }
 
       /* PAD Colours */
 
       .mimosa {
-        background: linear-gradient(45deg, #d53369 0%, #daae51 100%);
+        background: radial-gradient( #da9351, #d53369);
       }
 
       .aqua {
-        background: linear-gradient(45deg, #3a47d5 0%, #00d2ff 100%);
+        background: radial-gradient( #00d2ff, #3a47d5);
       }
 
       .mellow {
-        background: linear-gradient(215deg, #f8ff00 0%, #3ad59f 100%);
+        background: radial-gradient( #beff55, #3ad59f);
       }
 
       .cool {
-        background-image: linear-gradient( 215deg, #5EFCE8 10%, #736EFE 100%);
+        background-image: radial-gradient(  #5EFCE8 10%, #736EFE);
       }
 
       .salmon {
-        background-image: linear-gradient(215deg, #feb692 10%, #ea5455 100%);
+        /* background-image: radial-gradient( #feb692 10%, #ea5455 100%); */
+        background-image: radial-gradient( #feb692, #ea5455);
+
       }
 
+
       .burningOrange {
-        background: linear-gradient(45deg, #ff416c, #ff4b2b); 
+        background: radial-gradient( #e9705b, #ff416c); 
       }
 
       .moonlit {
-        background: linear-gradient(45deg, #0f2027, #203a43, #2c5364); 
+        background: radial-gradient(  #2c5364, #0f2027); 
       }
 
       .coal {
-        background: linear-gradient(215deg, #eb5757, #000000);
+        background: radial-gradient( #eb5757, #000000);
       }
