--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@
         width: 200px;
         box-shadow: inset 0 0 20px rgba(0,0,0,0.2), 0 10px 15px rgba(0,0,0,0.2);
         transition: all 100ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
-        border: 1px solid rgba(255,255,255, 0.1)
+        border: 1px solid rgba(255,255,255, 0.1);
+        text-shadow: 0 2px 3px rgba(0,0,0,0.5);
       }
 
       .pad:hover, .stop:hover {
